2020F/session04/log
BadJava.java:2: error: <identifier> expected
    public cstatic void main(String args) {
                  ^
1 error
